# gaxl-smart-rnd

./: .env.example  .gitignore  APPROACH_DOCUMENT.md  Customer_Ontology_Prompt.xml  README.md  generate_approach_doc.py  main.py  pyproject.toml  requirements.txt
data/: EDB-DQ-Shape Rules.xlsx  python_profiling 3.json
output/: .gitkeep  DQ_Rules_Approach_Document.docx  dq_rules.json  dq_rules.xlsx
src/: __init__.py
src/agents/: __init__.py  data_profiler_agent.py  output_formatter_agent.py  rule_derivation_agent.py  rule_validation_agent.py
src/config/: __init__.py  attribute_config.py  settings.py  taxonomy_filter.py
src/models/: __init__.py  agent_state.py  dq_rule.py  profiling_stats.py
src/prompts/: __init__.py  rule_derivation_prompt.py
src/utils/: __init__.py
src/workflow/: __init__.py  edges.py  graph_builder.py  nodes.py
